--- a/studyroom/guide/element.html
+++ b/studyroom/guide/element.html
@@ -37,7 +37,7 @@
 <div class="wrapper">
     <!--S:header-->
     <header class="header">
-        <a href="./../../"><img src="./../../images/logo.png" alt="Egg School"></a>
+        <a href="./../../"><img src="./../../../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -88,7 +88,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header">
-        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./../../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -104,7 +104,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src="./../images/logo.png" alt="Egg School">
+                <img class="logo" src="./../../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="./../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -174,7 +174,7 @@
         <section class="guide_wrapper">
             <article class="cover_block">
                 <div class="thumb_block">
-                    <img src="./../images/guide/element/img_top_guide_green.png" alt="">
+                    <img src="./../../images/guide/element/img_top_guide_green.png" alt="">
                 </div>
                 <div class="inner">
                     <h4 class="greeting" data-aos="fade-up">
@@ -186,7 +186,7 @@
                         초등 학습 가이드북
                     </h2>
                     <div class="thumb_block img_cover" data-aos="fade-up">
-                        <img src="./../images/guide/element/char_guide_element.png" alt="">
+                        <img src="./../../images/guide/element/char_guide_element.png" alt="">
                     </div>
                 </div>
             </article>
@@ -201,7 +201,7 @@
                     <em class="font_point">책장 한 켠을 비워주세요.</em>
                 </p>
                 <div class="thumb_block img_package w_100" data-aos="fade-up">
-                    <img src="./../images/guide/element/img_guide_package.png" alt="">
+                    <img src="./../../images/guide/element/img_guide_package.png" alt="">
                 </div>
             </article>
             <!--S:교재 받은 후-->
@@ -214,7 +214,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/img_eggschool_app.png" alt="">
+                            <img src="./../../images/guide/img_eggschool_app.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -226,12 +226,12 @@
                             <ul class="app_link_block">
                                 <li>
                                     <button onclick="redirectToAppStore('android')">
-                                        <img src="./../images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
+                                        <img src="./../../images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
                                     </button>
                                 </li>
                                 <li>
                                     <button onclick="redirectToAppStore('ios')">
-                                        <img src="./../images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
+                                        <img src="./../../images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
                                     </button>
                                 </li>
                             </ul>
@@ -240,7 +240,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/img_app_login.png" alt="">
+                            <img src="./../../images/guide/img_app_login.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -253,7 +253,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/element/img_app_main.png" alt="">
+                            <img src="./../../images/guide/element/img_app_main.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -275,7 +275,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/element/img_step02_01.png" alt="">
+                            <img src="./../../images/guide/element/img_step02_01.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -288,7 +288,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/element/img_step02_02.png" alt="">
+                            <img src="./../../images/guide/element/img_step02_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -300,7 +300,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/element/img_step02_03.png" alt="">
+                            <img src="./../../images/guide/element/img_step02_03.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -325,7 +325,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/element/img_step03_01.png" alt="">
+                            <img src="./../../images/guide/element/img_step03_01.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -340,7 +340,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/element/img_step03_02.png" alt="">
+                            <img src="./../../images/guide/element/img_step03_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -357,7 +357,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/element/img_step03_03.png" alt="">
+                            <img src="./../../images/guide/element/img_step03_03.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -370,7 +370,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">04</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/element/img_step03_04.png" alt="">
+                            <img src="../../../images/guide/element/img_step03_04.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -410,7 +410,7 @@
         <div class="fnb_btm_block">
             <div class="container d_flex m_column_reverse">
                 <div>
-                    <h2 class="f_logo m_d_none"><img src="../../images/f_logo.png" alt="Egg School"></h2>
+                    <h2 class="f_logo m_d_none"><img src="../../../images/f_logo.png" alt="Egg School"></h2>
                     <!--pc-->
                     <ul class="fnb_info_block m_d_none d_block">
                         <li class="fnb_info">
@@ -454,7 +454,7 @@
                         </ul>
                     </div>
                     <ul class="sns_link_block">
-                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="../../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
+                        <li class="sns_link"><a href="https://cafe.naver.com/eggschoolk" target="_blank"><img src="../../../images/icon/ico_sns_cafe.png" alt="네이버 카페"></a></li>
                         <li class="sns_link"><a href="https://www.instagram.com/eggschool_k/" target="_blank"><img src="../../images/icon/ico_sns_instar.png" alt="인스타그램"></a></li>
                         <li class="sns_link"><a href="https://www.youtube.com/channel/UC6te0BNTwvi8DDXeROUlSIg" target="_blank"><img src="../../images/icon/ico_sns_youtube.png" alt="유튜브"></a></li>
                     </ul>
