--- a/studyroom/guide/kinder.html
+++ b/studyroom/guide/kinder.html
@@ -37,7 +37,7 @@
 <div class="wrapper">
     <!--S:header-->
     <header class="header">
-        <a href="./../../"><img src="./../../images/logo.png" alt="Egg School"></a>
+        <a href="./../../"><img src="./../../../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -88,7 +88,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header">
-        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./../../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -104,7 +104,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src="./../images/logo.png" alt="Egg School">
+                <img class="logo" src="./../../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="./../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -174,7 +174,7 @@
         <section class="guide_wrapper">
             <article class="cover_block">
                 <div class="thumb_block">
-                    <img src="./../images/guide/kinder/img_top_guide_red.png" alt="">
+                    <img src="./../../images/guide/kinder/img_top_guide_red.png" alt="">
                 </div>
                 <div class="inner">
                     <h4 class="greeting" data-aos="fade-up">
@@ -186,7 +186,7 @@
                         유치원 학습 가이드북
                     </h2>
                     <div class="thumb_block img_cover" data-aos="fade-up">
-                        <img src="./../images/guide/kinder/char_guide_kinder.png" alt="">
+                        <img src="./../../images/guide/kinder/char_guide_kinder.png" alt="">
                     </div>
                 </div>
             </article>
@@ -199,7 +199,7 @@
                     <em class="font_point">스토리북 4권 & 활동자료 4종</em>이 배송돼요.
                 </p>
                 <div class="thumb_block img_package" data-aos="fade-up">
-                    <img src="./../images/guide/kinder/img_guide_package.png" alt="">
+                    <img src="./../../images/guide/kinder/img_guide_package.png" alt="">
                 </div>
                 <p class="desc font_center" data-aos="fade-up">
                     <strong class="font_700">* 풀 세트 구매 시,</strong><br />
@@ -217,7 +217,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/img_eggschool_app.png" alt="">
+                            <img src="./../../images/guide/img_eggschool_app.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -229,12 +229,12 @@
                             <ul class="app_link_block">
                                 <li>
                                     <button onclick="redirectToAppStore('android')">
-                                        <img src="./../images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
+                                        <img src="./../../images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
                                     </button>
                                 </li>
                                 <li>
                                     <button onclick="redirectToAppStore('ios')">
-                                        <img src="./../images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
+                                        <img src="./../../images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
                                     </button>
                                 </li>
                             </ul>
