--- a/studyroom/guide/library.html
+++ b/studyroom/guide/library.html
@@ -36,7 +36,7 @@
 <div class="wrapper">
     <!--S:header-->
     <header class="header">
-        <a href="./../../"><img src="./../../images/logo.png" alt="Egg School"></a>
+        <a href="./../../"><img src="./../../../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -87,7 +87,7 @@
     </header>
     <!--S:mobile-->
     <header class="m_header">
-        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
+        <div class="logo"><a href="/"><img src="./../../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -103,7 +103,7 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src="./../images/logo.png" alt="Egg School">
+                <img class="logo" src="./../../images/logo.png" alt="Egg School">
                 <p class="login_txt"><a href="./../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
@@ -173,7 +173,7 @@
         <section class="guide_wrapper">
             <article class="cover_block">
                 <div class="thumb_block">
-                    <img src="./../images/guide/library/img_top_guide_purple.png" alt="">
+                    <img src="./../../images/guide/library/img_top_guide_purple.png" alt="">
                 </div>
                 <div class="inner">
                     <h4 class="greeting" data-aos="fade-up">
@@ -185,7 +185,7 @@
                         도서관 학습 가이드북
                     </h2>
                     <div class="thumb_block img_cover" data-aos="fade-up">
-                        <img src="./../images/guide/library/char_guide_library.png" alt="">
+                        <img src="./../../images/guide/library/char_guide_library.png" alt="">
                     </div>
                 </div>
             </article>
@@ -200,7 +200,7 @@
                     <em class="font_point">책장 한 켠을 비워주세요.</em>
                 </p>
                 <div class="thumb_block img_package w_100" data-aos="fade-up">
-                    <img src="./../images/guide/library/img_guide_package.png" alt="">
+                    <img src="./../../images/guide/library/img_guide_package.png" alt="">
                 </div>
             </article>
             <!--S:교재 받은 후-->
@@ -213,7 +213,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/img_eggschool_app.png" alt="">
+                            <img src="./../../images/guide/img_eggschool_app.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -225,12 +225,12 @@
                             <ul class="app_link_block">
                                 <li>
                                     <button onclick="redirectToAppStore('android')">
-                                        <img src="./../images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
+                                        <img src="./../../images/icon/ico_googlePlay.png" alt="구글플레이 다운로드"/>
                                     </button>
                                 </li>
                                 <li>
                                     <button onclick="redirectToAppStore('ios')">
-                                        <img src="./../images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
+                                        <img src="./../../images/icon/ico_appStore.png" alt="앱스토어 다운로드"/>
                                     </button>
                                 </li>
                             </ul>
@@ -239,7 +239,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/img_app_login.png" alt="">
+                            <img src="./../../images/guide/img_app_login.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -252,7 +252,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/library/img_app_main.png" alt="">
+                            <img src="./../../images/guide/library/img_app_main.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -273,7 +273,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/img_eggschool_app.png" alt="">
+                            <img src="../../../images/guide/img_eggschool_app.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -287,7 +287,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="../../images/guide/library/img_step02_02.png" alt="">
+                            <img src="../../../images/guide/library/img_step02_02.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
