--- a/product/freetrial/kinder.html
+++ b/product/freetrial/kinder.html
@@ -36,8 +36,8 @@
 <body>
 <div class="wrapper">
     <!--S:header-->
-    <header class="header">
-        <a href="./../../"><img src="./../../../images/logo.png" alt="Egg School"></a>
+    <header class="header font_black">
+        <a href="./../../"><img src="./../../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -87,7 +87,7 @@
         </div>
     </header>
     <!--S:mobile-->
-    <header class="m_header">
+    <header class="m_header font_black">
         <div class="logo"><a href="/"><img src="./../../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
@@ -204,7 +204,7 @@
                                 장난감을 정리하고 집으로 갈 준비를 해요.
                             </p>
                             <div class="thumb_block">
-                                <img src="./../images/product/freetrial/kinder/img_component_prek.png" loading="lazy" alt="">
+                                <img src="./../../images/product/freetrial/kinder/img_component_prek.png" loading="lazy" alt="">
                             </div>
                             <p class="dot_desc">
                                 교재 1권, 활동자료 (숨은그림찾기, 그림판)<br />
@@ -223,7 +223,7 @@
                                 냅킨으로 흘린 음식을 스스로 닦을 수 있어요.
                             </p>
                             <div class="thumb_block">
-                                <img src="./../images/product/freetrial/kinder/img_component_k.png" loading="lazy" alt="">
+                                <img src="./../../images/product/freetrial/kinder/img_component_k.png" loading="lazy" alt="">
                             </div>
                             <p class="dot_desc">
                                 교재 1권, 활동자료 (에그스쿨 냅킨)<br />
@@ -246,7 +246,7 @@
                         <li class="content_box swiper-slide" data-aos="fade-up">
                             <div class="thumb_block">
                                 <div class="inner">
-                                    <img src="./../images/product/freetrial/kinder/img_step_01.png" alt="">
+                                    <img src="./../../images/product/freetrial/kinder/img_step_01.png" alt="">
                                 </div>
                             </div>
                             <div class="info_block">
