--- a/studyroom/guide/kinder.html
+++ b/studyroom/guide/kinder.html
@@ -37,8 +37,8 @@
 <body>
 <div class="wrapper">
     <!--S:header-->
-    <header class="header">
-        <a href="./../../"><img src="./../../../images/logo.png" alt="Egg School"></a>
+    <header class="header none_transparent">
+        <a href="./../../"><img src="./../../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -88,7 +88,7 @@
         </div>
     </header>
     <!--S:mobile-->
-    <header class="m_header">
+    <header class="m_header none_transparent">
         <div class="logo"><a href="/"><img src="./../../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
@@ -244,7 +244,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">02</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/img_app_login.png" alt="">
+                            <img src="./../../images/guide/img_app_login.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -257,7 +257,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">03</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/kinder/img_app_main.png" alt="">
+                            <img src="./../../images/guide/kinder/img_app_main.png" alt="">
                         </div>
                         <div class="info_block">
                             <p class="desc">
@@ -279,7 +279,7 @@
                     <li class="step_box" data-aos="fade-up">
                         <h6 class="num">01</h6>
                         <div class="thumb_block">
-                            <img src="./../images/guide/kinder/img_step02_01.png" alt="">
+                            <img src="./../../images/guide/kinder/img_step02_01.png" alt="">
                         </div>
                         <div class="info_block">
                             <h6 class="title">스토리북 읽기</h6>
