--- a/studyroom/guide/library.html
+++ b/studyroom/guide/library.html
@@ -36,8 +36,8 @@
 <body>
 <div class="wrapper">
     <!--S:header-->
-    <header class="header">
-        <a href="./../../"><img src="./../../../images/logo.png" alt="Egg School"></a>
+    <header class="header none_transparent">
+        <a href="./../../"><img src="./../../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
@@ -87,7 +87,7 @@
         </div>
     </header>
     <!--S:mobile-->
-    <header class="m_header">
+    <header class="m_header none_transparent">
         <div class="logo"><a href="/"><img src="./../../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
